--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
   },
   "require": {
     "php": "^8.1",
-    "illuminate/support": "^12.17"
+    "illuminate/console": "*",
+    "illuminate/support": "^12.17",
+    "laravel/prompts": "^0.3.5",
+    "symfony/finder": "^7.3"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
